# rukan

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
src/rukan/: __init__.py  engine.py  loads.py  modal.py  model.py  spectra.py  units.py
tests/: test_engine.py  test_units.py
verification/: README.md  case01_cantilever_column.py  case02_shear_frame_2dof.py  case03_truss_static.py  case05_modal_spectral_nch2369.py  case06_braced_releases.py  case07_galpon3d_nch2369.py  case08_gable_loads.py
